[tool.poetry]
name = "cellium"
version = "0.1.0"
description = "Inference client for the Cellium Network. Created by Agent Artificial. Based on OpenAI's API Client."
authors = [
    "Richard Porteous <richard@agentartificial.com>"
    ]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.14.2"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
loguru = "^0.7.2"
websocket-client = {git = "https://github.com/websocket-client/websocket-client.git"}
websocket = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
