[tool.poetry]
name = "cellium"
version = "0.1.1"
description = "Inference client for the Cellium Network. Created by Agent Artificial. Based on OpenAI's API Client."
authors = [
    "Richard Porteous <richard@agentartificial.com>"
    ]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.14.2"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
loguru = "^0.7.2"
websocket-client = {git = "https://github.com/websocket-client/websocket-client.git"}
websocket = "^0.2.1"
annotated-types = "^0.7.0"
click = "^8.1.7"
distro = "^1.9.0"
exceptiongroup = "^1.2.1"
h11 = "^0.14.0"
httpcore = "^1.0.5"
idna = "^3.7"
iniconfig = "^2.0.0"
mypy-extensions = "^1.0.0"
packaging = "^24.0"
pathspec = "^0.12.1"
platformdirs = "^4.2.2"
pluggy = "^1.5.0"
pydantic = "^2.7.2"
pydantic-core = "^2.18.3"
pytest = "^8.2.1"
sniffio = "^1.3.1"
tomli = "^2.0.1"
typing-extensions = "^4.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
